--- a/css/style.css
+++ b/css/style.css
@@ -79,19 +79,23 @@ body {
     visibility: visible;
 }
 .topo {
-    font-size: 4rem;
     padding: 30vw 60vw 2vw 3vw;
-    color: #ecf1ee;
     background: url(../imagem/image\ 87.png);
-    background-position: center;
+    background-position: right;
     width: auto;
     transition: all 0.5s ease;
     font-family: "Hammersmith One", sans-serif;
     text-align: center;
+    z-index: 3;
 }
 .topo.ativo {
     margin-left: 300px;
     background-color: transparent;
+}
+.topo h1 {
+    font-size: 4rem;
+    color: #ecf1ee;
+    z-index: 8;
 }
 .body {
     margin: 3vw 6vw;
