--- a/css/style.css
+++ b/css/style.css
@@ -79,24 +79,174 @@ body {
     visibility: visible;
 }
 .topo {
-    padding: 30vw 60vw 2vw 3vw;
+    padding: 30vw 50vw 4vw 5vw;
     background: url(../imagem/image\ 87.png);
     background-position: right;
     width: auto;
     transition: all 0.5s ease;
     font-family: "Hammersmith One", sans-serif;
     text-align: center;
-    z-index: 3;
 }
 .topo.ativo {
     margin-left: 300px;
     background-color: transparent;
 }
 .topo h1 {
-    font-size: 4rem;
+    font-size: 5rem;
     color: #ecf1ee;
-    z-index: 8;
 }
 .body {
-    margin: 3vw 6vw;
+    margin: 4vw 8vw;
+}
+.body h2 {
+    font-size: 2rem;
+    font-weight: bold;
+    color: #02210C;
+    text-align: center;
+    margin-bottom: 2vw;
+}
+.body p {
+    font-size: 1.2rem;
+    font-family: "Roboto", sans-serif;
+    text-align: center;
+}
+.body h3 {
+    color: #02210C;
+    font-family: "Roboto", sans-serif;
+    text-align: center;
+    font-weight: bold;
+    font-size: 1.7rem;
+    margin: 6vw 0 3vw 0;
+}
+.body ul {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    align-items: center;
+}
+.body ul li {
+    background-color: #D3E6D3;
+    border-radius: 10px;
+    margin: 1vw;
+    padding: 1vw 0;
+}
+.body ul li h4 {
+    padding: 20px;
+    font-size: 1.2rem;
+    font-weight: bold;
+    color: #02210C;
+}
+.body ul li p {
+    font-size: 1rem;
+    text-align: left;
+    padding: 1vw;
+}
+.body ul li p a {
+    border: 1px solid #000;
+    padding: 10px;
+    border-radius: 10px;
+    margin: 0 4vw;
+}
+.body ul li p a:hover {
+    cursor: pointer;
+    color: #D3E6D3;
+    background-color: #000;
+    transition: background-color 0.5s ease;
+}
+.escolher {
+    margin: 4vw 8vw;
+}
+.escolher h2 {
+    font-size: 2rem;
+    font-weight: bold;
+    color: #02210C;
+    text-align: center;
+    margin-bottom: 2vw;
+}
+.escolher p {
+    font-size: 1.4rem;
+    font-family: "Roboto", sans-serif;
+    text-align: center;
+}
+.escolher ul {
+    display: flex;
+    margin: 4vw 0;
+    text-align: center;
+}
+
+.cards {
+  list-style: none;
+  display: flex; 
+  gap: 20px;
+  padding: 0;
+  margin: 0;
+}
+
+.cards li {
+  flex: 1;
+  background-color: #D3E6D3;
+  border-radius: 12px;
+  padding: 20px;
+  text-align: center;
+}
+
+.icon {
+  width: 80px;
+  height: 80px;
+  background-color: #ABD0B5;
+  border-radius: 50%;
+  display: flex;          
+  align-items: center;    
+  justify-content: center;
+  margin: 0 auto 15px;
+}
+
+.icon img {
+  width: 40px;
+}
+.escolher ul li h3 {
+    font-size: 1.4rem;
+    color: #02210C;
+    font-weight: bold;
+}
+.escolher ul li p {
+    font-size: 1rem;
+    padding: 20px;
+}
+.sobre {
+    margin: 4vw 8vw;
+}
+.sobre h2 {
+    font-size: 2rem;
+    color: #02210C;
+    text-align: center;
+    margin: 2vw 20vw;
+}
+.sobre ul.fundo {
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  padding: 0;
+  margin: 0;
+  justify-content: center;
+}
+
+.sobre ul.fundo li {
+  background-color: #C1D9C3;
+  border-radius: 12px;
+  padding: 2vw;
+  max-width: 350px;
+  box-shadow: 1.5vw 1.5vw 0 #8EAB8E;
+}
+
+.sobre ul.fundo li video {
+  width: 100%;
+  height: 100%;  
+  border-radius: 8px;
+  display: block;
+}
+
+.sobre div {
+    display: flex;
+    justify-content: space-between;
 }
