--- a/css/style.css
+++ b/css/style.css
@@ -245,8 +245,71 @@ body {
   border-radius: 8px;
   display: block;
 }
-
-.sobre div {
+.info {
+    margin: 4vw 8vw 0 8vw;
+}
+.info div {
     display: flex;
     justify-content: space-between;
+}
+
+.info div ul li h3 {
+    display: inline-block;
+    background-color: #C1D9C3;
+    font-size: 1.4rem;
+    color: #02210C;
+    font-weight: bold;
+    padding: 6px 12px;
+    border-radius: 6px;
+    margin: 2vw;
+}
+.info div ul li p {
+    font-size: 1.2rem;
+    padding: 0 3vw 8vw 0;
+}
+.info div img {
+height: 350px;
+}
+footer {
+    background-color: #D3E6D3;
+    padding: 4vw;
+}
+footer div.conteiner {
+    display: flex;
+    justify-content: space-between;
+}
+footer div.conteiner div.redes h4 {
+    font-weight: bold;
+    font-size: 1.4rem;
+    padding-bottom: 20px;
+}
+footer div.conteiner div.redes p {
+    color: #4e4e4e;
+    font-size: 1rem;
+}
+footer div.conteiner div.redes nav p {
+    color: #000;
+    font-size: 1.8rem;
+    padding: 20px 10px;
+}
+footer div.conteiner div.redes nav p a {
+    padding-right: 15px;
+}
+
+footer div.conteiner div.esporte nav ul li h4 {
+    font-weight: bold;
+    font-size: 1.2rem;
+    padding-bottom: 15px;
+}
+footer div.conteiner div.esporte nav ul li a {
+    color: #4e4e4e;
+    font-size: 1rem;
+}
+footer div.contato {
+    text-align: center;
+}
+footer div.contato {
+    color: #6d6d6d;
+    font-size: 0.8rem;
+    line-height: 22px;
 }
