--- a/css/volei.css
+++ b/css/volei.css
@@ -7,7 +7,7 @@
 }
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color: #ecf1ee;
+    background-color: #F8FBF8;
     transition: background-color 0.5s ease;
 }
 .menu-lateral {
