--- a/css/capoeira.css
+++ b/css/capoeira.css
@@ -79,15 +79,20 @@ body {
     visibility: visible;
 }
 .topo {
-    padding: 30vw 50vw 4vw 5vw;
-    background: url(../imagem/image\ 16.png);
+    padding: 35vw 50vw 18vw 5vw;
+    background-size: cover;
     background-position: top;
-    width: 100%;
-    height: 100%;
+    width: auto;
     transition: all 0.5s ease;
     font-family: "Hammersmith One", sans-serif;
     text-align: center;
+    opacity: 90%;
+    background: 
+    linear-gradient(to bottom, rgba(252, 252, 252, 1), transparent 20%), 
+    url('../imagem/image\ 16.png') center;
 }
+
+
 .topo.ativo {
     margin-left: 300px;
     background-color: transparent;
@@ -95,7 +100,7 @@ body {
 .topo h1 {
     font-size: 5rem;
     color: #ecf1ee;
-    padding-bottom: 5vw;
+    text-align: center;
 }
 .praticar {
     margin: 4vw 8vw;
@@ -118,7 +123,7 @@ body {
   list-style: none;
   display: flex; 
   padding: 0;
-  margin: 5vw;
+  margin: 5vw 8vw;
   align-items: center;
 }
 
@@ -144,9 +149,6 @@ body {
 
 .icon img {
   width: 40px;
-}
-.praticar div.imagem {
-    width: 300px;
 }
 .praticar h3 {
     font-size: 1.4rem;
