--- a/css/style.css
+++ b/css/style.css
@@ -80,13 +80,19 @@ body {
 }
 .topo {
     padding: 30vw 50vw 4vw 5vw;
-    background: url(../imagem/image\ 87.png);
-    background-position: right;
+    background-size: cover;
+    background-position: top;
     width: auto;
     transition: all 0.5s ease;
     font-family: "Hammersmith One", sans-serif;
     text-align: center;
+    opacity: 85%;
+    background: 
+    linear-gradient(to bottom, rgba(252, 252, 252, 1), transparent 20%), 
+    url('../imagem/image\ 87.png') center;
 }
+
+
 .topo.ativo {
     margin-left: 300px;
     background-color: transparent;
@@ -94,6 +100,8 @@ body {
 .topo h1 {
     font-size: 5rem;
     color: #ecf1ee;
+    text-align: center;
+    
 }
 .body {
     margin: 4vw 8vw;
@@ -148,9 +156,10 @@ body {
 }
 .body ul li p a:hover {
     cursor: pointer;
-    color: #D3E6D3;
-    background-color: #000;
+    color: #aad1aa;
+    background-color: rgba(255, 255, 255, 0.671);
     transition: background-color 0.5s ease;
+    border: none;
 }
 .escolher {
     margin: 4vw 8vw;
@@ -162,12 +171,26 @@ body {
     text-align: center;
     margin-bottom: 2vw;
 }
-.escolher p {
+.escolher div.escolha p {
     font-size: 1.4rem;
     font-family: "Roboto", sans-serif;
     text-align: center;
 }
-.escolher ul {
+.escolher div.escolha p a {
+    text-align: center;
+    border: 1px solid black;
+    background-color: transparent;
+    padding: 10px 20px;
+    margin: 3vw 0 2vw;
+    border-radius: 10px;
+}
+.escolher div.escolha p a:hover {
+    border: none;
+    background-color: #D3E6D3;
+    color: white;
+    transition: background-color 0.5s ease-out;
+}
+.escolher div.card ul {
     display: flex;
     margin: 4vw 0;
     text-align: center;
