--- a/css/capoeira.css
+++ b/css/capoeira.css
@@ -5,11 +5,19 @@
     --text-secondary-color: #001100;
     --background-color: #013612;
 }
+
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-color: #F8FBF8;
     transition: background-color 0.5s ease;
+    transition: all 0.5s ease;
 }
+body.ativo {
+    margin-left: 300px;
+    background-color: transparent;
+    transition: all 0.5s ease;
+}
+
 .menu-lateral {
     position: fixed;
     left: -300px;
@@ -18,20 +26,24 @@ body {
     height: 100%;
     background-color: var(--background-color);
     z-index: 5;
-    box-shadow: 0 0 20px rgba( 0, 0, 0, 0.1);
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
     transition: all 0.5s cubic-bezier(0.68, -0.55, 0.27, 1.55);
 }
+
 .menu-lateral.ativo {
     left: 0;
 }
+
 .menu-lateral ul {
     list-style-type: none;
     padding: 0;
     margin-top: 60px;
 }
+
 .menu-lateral ul li {
     padding: 15px 30px;
 }
+
 .menu-lateral ul li a {
     text-decoration: none;
     color: var(--text-color);
@@ -40,12 +52,14 @@ body {
     align-items: center;
     gap: 10px;
 }
+
 .menu-lateral ul li:hover {
     background-color: var(--secondary-color);
 }
+
 .toggle {
     background-color: var(--primary-color);
-    position: absolute;
+    position: fixed;
     left: 20px;
     top: 20px;
     z-index: 6;
@@ -57,54 +71,55 @@ body {
     color: #ecf1ee;
     transition: all 0.5s ease-in-out;
 }
+
 .toggle:hover {
     background-color: var(--secondary-color);
 }
+
 .toggle.ativo {
     left: 320px;
 }
+
 .background {
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba( 0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.5);
     opacity: 0;
     visibility: hidden;
     z-index: 4;
 }
+
 .background.ativo {
     opacity: 1;
     visibility: visible;
 }
+
 .topo {
     padding: 35vw 50vw 18vw 5vw;
     background-size: cover;
     background-position: top;
     width: auto;
-    transition: all 0.5s ease;
     font-family: "Hammersmith One", sans-serif;
     text-align: center;
     opacity: 90%;
-    background: 
-    linear-gradient(to bottom, rgba(252, 252, 252, 1), transparent 20%), 
-    url('../imagem/image\ 16.png') center;
+    background:
+        linear-gradient(to bottom, rgba(252, 252, 252, 1), transparent 20%),
+        url('../imagem/image\ 16.png') center;
 }
 
-
-.topo.ativo {
-    margin-left: 300px;
-    background-color: transparent;
-}
 .topo h1 {
     font-size: 5rem;
     color: #ecf1ee;
     text-align: center;
 }
+
 .praticar {
     margin: 4vw 8vw;
 }
+
 .praticar h2 {
     font-size: 2rem;
     font-weight: bold;
@@ -112,6 +127,7 @@ body {
     text-align: center;
     margin-bottom: 2vw;
 }
+
 .praticar p.sub {
     font-size: 1.2rem;
     font-family: "Roboto", sans-serif;
@@ -120,43 +136,183 @@ body {
 }
 
 .card {
-  list-style: none;
-  display: flex; 
-  padding: 0;
-  margin: 5vw 8vw;
-  align-items: center;
+    list-style: none;
+    display: flex;
+    padding: 0;
+    margin: 5vw 4vw;
+    align-items: center;
 }
 
-.cards  {
-  flex: 1;
-  background-color: #D3E6D3;
-  border-radius: 12px;
-  padding: 1vw;
-  text-align: center;
-  margin: 3vw 12vw;
+.cards {
+    flex: 1;
+    background-color: #D3E6D3;
+    border-radius: 30px;
+    padding: 1vw;
+    text-align: center;
+    margin: 3vw 10vw;
 }
 
 .icon {
-  width: 80px;
-  height: 80px;
-  background-color: #ABD0B5;
-  border-radius: 50%;
-  display: flex;          
-  align-items: center;    
-  justify-content: center;
-  margin: 2vw auto 15px;
+    width: 80px;
+    height: 80px;
+    background-color: #ABD0B5;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 2vw auto 15px;
 }
 
 .icon img {
-  width: 40px;
+    width: 40px;
 }
+
 .praticar h3 {
     font-size: 1.4rem;
     color: #02210C;
     font-weight: bold;
 }
+
 .praticar div.card p {
     font-size: 1rem;
     padding: 20px;
     line-height: 1.5vw;
+}
+
+.exercicio {
+    margin: 4vw 8vw;
+    text-align: center;
+}
+.escolher div.card ul {
+    margin: 4vw 0;
+    text-align: center;
+}
+
+.cardao {
+  list-style: none;
+  display: flex; 
+  gap: 20px;
+  padding: 0;
+  margin: 0;
+}
+
+.cartoes li {
+  flex: 1;
+  background-color: #D3E6D3;
+  border-radius: 30px;
+  padding: 20px;
+  text-align: center;
+  margin: 3vw 14vw;
+}
+
+.icone {
+    width: 110px;
+    height: 90px;
+    background-color: #ABD0B5;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 2vw auto 15px;
+}
+
+.icone img {
+    width: 50px;
+}
+.cima {
+    display: flex;
+    align-items: center;
+}
+.cima div.text {
+    text-align: left;
+}
+.cima h3 {
+    font-size: 1.4rem;
+    font-weight: bold;
+    color: #02210C;
+    padding: 20px 42px;
+}
+.cima p {
+    padding: 0 28px;
+    color: rgba(0, 0, 0, 0.5);
+}
+.baixo {
+    display: flex;
+    text-align: left;
+}
+.baixo h4 {
+    font-size: 1.2rem;
+    font-weight: bold;
+    color: #02210C;
+    padding: 20px 20px;
+}
+.baixo p {
+    padding: 2px 28px;
+    color: rgba(0, 0, 0, 0.5);
+    font-size: 0.8rem;
+}
+
+.icone-alongamento {
+    width: 110px;
+    height: 100px;
+    background-color: #ABD0B5;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 2vw auto 15px;
+}
+
+.icone-alongamento img {
+    width: 75px;
+}
+.baixo-alongamento {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    text-align: left;
+}
+.baixo-alongamento h4 {
+    font-size: 1.2rem;
+    font-weight: bold;
+    color: #02210C;
+    padding: 20px 20px;
+}
+.baixo-alongamento p {
+    padding: 2px 28px;
+    color: rgba(0, 0, 0, 0.5);
+    font-size: 0.8rem;
+}
+.dicas {
+    margin: 3vw 14vw;
+    text-align: center;
+}
+.dicas h2 {
+    border-bottom: 8px solid #ABD0B5;
+    padding: 0 0 1vw 0;
+    font-weight: bold;
+    font-size: 1.8rem;
+    display: inline-block;
+    margin: 3vw 0;
+}
+.dicas ul {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    text-align: left;
+}
+.dicas ul li {
+    border: 14px solid #D3E6D3;
+    padding: 20px;
+    margin: 2vw;
+    border-radius: 12px;
+}
+.dicas ul li h3 {
+    font-size: 1.4rem;
+    font-weight: bold;
+    color: #02210C;
+    padding: 16px 16px 10px;
+}
+.dicas ul li p {
+    padding: 0 16px 16px;
+    color: rgba(0, 0, 0, 0.5);
+    font-size: 1rem;
 }
