--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,16 @@ body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-color: #F8FBF8;
     transition: background-color 0.5s ease;
+    transition: all 0.5s ease;
+}
+body.ativo {
+    margin-left: 300px;
+    background-color: transparent;
+    transition: all 0.5s ease;
+}
+body.ativo .body ul li p a {
+    margin: 0;
+    font-size: 0.8rem;
 }
 .menu-lateral {
     position: fixed;
@@ -45,7 +55,7 @@ body {
 }
 .toggle {
     background-color: var(--primary-color);
-    position: absolute;
+    position: fixed;
     left: 20px;
     top: 20px;
     z-index: 6;
@@ -62,7 +72,9 @@ body {
 }
 .toggle.ativo {
     left: 320px;
+    border: none;
 }
+
 .background {
     position: fixed;
     top: 0;
@@ -83,7 +95,6 @@ body {
     background-size: cover;
     background-position: top;
     width: auto;
-    transition: all 0.5s ease;
     font-family: "Hammersmith One", sans-serif;
     text-align: center;
     opacity: 85%;
@@ -92,11 +103,6 @@ body {
     url('../imagem/image\ 87.png') center;
 }
 
-
-.topo.ativo {
-    margin-left: 300px;
-    background-color: transparent;
-}
 .topo h1 {
     font-size: 5rem;
     color: #ecf1ee;
